--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -29,20 +29,24 @@
 }
 
 .cardTitle {
-  font-family: 'Poppins';
+  font-family: 'Open S';
   font-size: 17px;
   display: flex;
   justify-content: space-between;
   align-items: baseline;
-  margin: 0;
-  font-weight: 500;
   color: var(--blue);
   background: rgb(255 255 255 / 80%);
   z-index: 100;
   border-radius: 10px;
-  padding: 5px 10px;
   border: 1px solid #edf4fb;
+  padding: 5px 10px;
 } 
+
+.cardTitle h2 {
+  font-size: 17px;
+  font-weight: 400;
+  margin: 0;
+}
 
 .cardTitle small {
   font-size: 13px;
@@ -77,9 +81,14 @@
   color: var(--green);
 }
 
-.attribute .redFont {
+.attribute .orangeFont {
   font-size: 18px;
   color: var(--orange);
+}
+
+.attribute .redFont {
+  font-size: 18px;
+  color: var(--red);
 }
 
 .attribute small {
