--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -29,7 +29,7 @@
 }
 
 .cardTitle {
-  font-family: 'Open S';
+  font-family: 'Poppins';
   font-size: 17px;
   display: flex;
   justify-content: space-between;
