--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -29,14 +29,16 @@
   width: 140px;
   overflow: hidden;
   left: 0;
-  top: 0;
-  bottom: 0;
+  top: -2px;
+  bottom: -2px;
   position: absolute;
   background: var(--secondary);
+  border-radius: 8px 0 0 8px;
 }
 
 .banner img {
-  overflow: hidden;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
